# predictorv2

./: .gitignore  CLAUDE.md  Makefile  docker-compose.prod.yml  docker-compose.yml  issues.md  plan.md  project.md
backend/: .env.example  Dockerfile  pyproject.toml  requirements.lock.txt
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/data/: wc2026_fixtures.json
backend/scripts/: audit_bracket_dump.py  dev_phase2_activate.py  gen_vapid.py  generate_polymarket_ko_snapshot.py  generate_polymarket_snapshot.py  ghost_lib.py  make_admin.py  probe_football_data.py  seed_data.py  seed_fixtures.py  seed_ghosts.py  seed_ghosts_ko.py  seed_ko_demo.py  seed_phase2_test.py  seed_phase_between.py  seed_phase_post.py  seed_phase_pretournament.py  seed_scatter_test.py  seed_test_predictions.py  simulate_scoring.py  sync_fifa_rankings.py  sync_squads.py  test_match_detail.py  verify_fifa_codes.py
backend/tests/: __init__.py  conftest.py  test_admin_fixture_endpoints.py  test_agreements_blindpool.py  test_audit_log.py  test_auth_bootstrap.py  test_bonus_results.py  test_bonus_service.py  test_bracket_consistency.py  test_bracket_exposure.py  test_community_predictions.py  test_config_secret.py  test_daily_drop.py  test_email.py  test_espn_provider.py  test_espn_provider_enrichment.py  test_espn_summary_split.py  test_external_scores.py  test_fixture_score.py  test_fixture_sync.py  test_football_data.py  test_ghost_exclusion.py  test_ghost_picks.py  test_knockout_match_points.py  test_knockout_resolver.py  (+33 more)
(+305 files in other folders)
